--- a/popup.html
+++ b/popup.html
@@ -2,20 +2,7 @@
 <html>
   <head>
     <title></title>
-    <style>
-      body {
-        min-width: 300px;
-        overflow-x: hidden;
-      }
-
-      img {
-        margin: 5px;
-        border: 2px solid black;
-        vertical-align: middle;
-        width: 75px;
-        height: 75px;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="popup.css">
 
     <!--
       - JavaScript and HTML must be in separate files: see our Content Security
@@ -26,7 +13,16 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    Hello!
+    <p>
+      <div class="header">frequency</div>
+      a little <input type="range" id="freq" min="1" max="10"> a lot
+    </p>
+    <p>
+      <div class="header">messages</div>
+      <div id="messages">
+        <input class="msg" id="newmsg" type="text" placeholder="Add another..."><br>
+      </div>
+    </p>
   </body>
 </html>
 
